--- a/src/tunnel_config.json
+++ b/src/tunnel_config.json
@@ -1,5 +1,5 @@
 {
-  "graphql": "https://9e1b-125-17-251-66.ngrok-free.app",
-  "hardhat": "https://4ce9-125-17-251-66.ngrok-free.app",
-  "inspect": "https://a38e-125-17-251-66.ngrok-free.app"
+  "graphql": "https://092b-103-125-162-28.ngrok-free.app",
+  "hardhat": "https://6f8c-103-125-162-28.ngrok-free.app",
+  "inspect": "https://3f15-103-125-162-28.ngrok-free.app"
 }
